# eosio-java-android-abieos-serialization-provider

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  allclasses-frame.html  allclasses-noframe.html  build.gradle  constant-values.html  deprecated-list.html  gradle.properties  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  serialized-form.html  settings.gradle
.scripts/: artifactory.sh
app/: build.gradle
app/src/androidTest/java/one/block/testeosiojavaabieos/: AbiEosInstrumentedTest.java  AbiEosSerializationProviderImplInstrumentedTest.java  AbiEosTest.java
app/src/androidTest/java/one/block/testeosiojavac/: AbiEosTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/one/block/testeosiojavaabieos/: MainActivity.java
app/src/main/java/one/block/testeosiojavac/: MainActivity.java
app/src/main/res/values/: strings.xml
eosiojavaabieos/: build.gradle
eosiojavaabieos/src/main/: AndroidManifest.xml
eosiojavaabieos/src/main/cpp/: CMakeLists.txt  abieos-lib.cpp
eosiojavaabieos/src/main/java/one/block/eosiojavaabieosserializationprovider/: AbiEos.java  AbiEosJson.java  AbiEosSerializationProviderImpl.java  AbieosContextNullError.java  EosioError.java  EosioErrorCode.java  JsonUtils.java  package-info.java
eosiojavaabieos/src/main/res/values/: strings.xml
eosiojavac/: build.gradle
eosiojavac/src/main/java/one/block/eosiojavaabieosserializationprovider/: AbiEos.java  AbiEosContextError.java  JsonUtils.java
gradle/wrapper/: gradle-wrapper.properties
one/block/eosiojavaabieosserializationprovider/: AbiEosJson.html  AbiEosSerializationProviderImpl.html  AbieosContextNullError.html  JsonUtils.html  package-frame.html  package-summary.html  package-tree.html
scripts/: deploy-artifactory.sh  veracode-scan.sh
